# stoxk

./: .env.example  README.md  app.js  index.html  login.html  middleware.js  pyproject.toml  styles.css
.github/workflows/: dividend-sync.yml
api/: _dashboard.js  _session.js  dashboard-data.js  quantities.js  usdkrw.js
api/auth/: login.js  logout.js  session.js
api/cron/: daily.js
apps_script/: Code.gs  README.md
data/: holdings.json
src/stoxk_tracker/: __init__.py  cli.py  config.py  sources.py  store.py  supabase.py
supabase/: schema.sql
tests/: test_tracker.py
