[project]
name = "stoxk"
version = "0.1.0"
description = "Dividend and distribution crawler that syncs Supabase and Google Sheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stoxk = "stoxk_tracker.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
